[gd_scene load_steps=46 format=2]

[ext_resource path="res://sceneObjects/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sceneObjects/rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/bubble.wav" type="AudioStream" id=3]
[ext_resource path="res://levels/level.gd" type="Script" id=4]
[ext_resource path="res://sceneObjects/orange.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/bgbig.png" type="Texture" id=6]
[ext_resource path="res://Comic Sans MS.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://images/bg.png" type="Texture" id=8]
[ext_resource path="res://sceneObjects/kelp.tscn" type="PackedScene" id=9]
[ext_resource path="res://sceneObjects/crab.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/wilhelm.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/heyman.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/bubbleReverse.wav" type="AudioStream" id=13]
[ext_resource path="res://runescape_uf.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://sounds/bigCoconutMouth.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/wind.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/heymad.wav" type="AudioStream" id=20]
[ext_resource path="res://sounds/whatsup.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/crab.wav" type="AudioStream" id=22]
[ext_resource path="res://sounds/equipCoconut.wav" type="AudioStream" id=23]
[ext_resource path="res://sounds/darkSouls.wav" type="AudioStream" id=24]
[ext_resource path="res://sounds/ricochet.wav" type="AudioStream" id=25]
[ext_resource path="res://sounds/sadSound.wav" type="AudioStream" id=29]
[ext_resource path="res://sounds/eb_glass.wav" type="AudioStream" id=31]
[ext_resource path="res://sounds/oof.wav" type="AudioStream" id=35]
[ext_resource path="res://sounds/deadparasite.wav" type="AudioStream" id=36]
[ext_resource path="res://sounds/eb_powerup2.wav" type="AudioStream" id=37]
[ext_resource path="res://sounds/um.wav" type="AudioStream" id=41]
[ext_resource path="res://sounds/kiss.wav" type="AudioStream" id=42]
[ext_resource path="res://sounds/ew.wav" type="AudioStream" id=43]
[ext_resource path="res://sounds/eba_speech_man.wav" type="AudioStream" id=44]
[ext_resource path="res://sounds/eba_swimming7.wav" type="AudioStream" id=47]
[ext_resource path="res://music/coconutCrabTime.mp3" type="AudioStream" id=48]
[ext_resource path="res://music/pleasantSong.mp3" type="AudioStream" id=49]
[ext_resource path="res://music/timetoparty.mp3" type="AudioStream" id=50]
[ext_resource path="res://music/enterTheDeep.mp3" type="AudioStream" id=51]
[ext_resource path="res://music/tension.mp3" type="AudioStream" id=52]

[sub_resource type="Environment" id=1]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 3
light_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_bottom = -4
extra_spacing_space = -1
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
extra_spacing_bottom = -4
extra_spacing_space = -1
font_data = ExtResource( 14 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 26
extra_spacing_bottom = -4
extra_spacing_space = -1
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="level" type="Spatial"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextBox" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 4 )
margin_left = 27.0
margin_top = 407.0
margin_right = 618.0
margin_bottom = 497.0
texture = ExtResource( 8 )
expand = true

[node name="Text" type="RichTextLabel" parent="CanvasLayer/TextBox"]
margin_left = 7.0
margin_right = 584.0
margin_bottom = 103.0
rect_clip_content = false
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#ff8426]if you so desire: 
    * use[/color] [wave]arrow keys[/wave] [color=#ff8426]to move..[/color]"
tab_size = 2
text = "if you so desire: 
    * use arrow keys to move.."

[node name="TextBoxTop" type="TextureRect" parent="CanvasLayer"]
visible = false
material = SubResource( 4 )
margin_left = 27.0
margin_top = 16.0
margin_right = 618.0
margin_bottom = 106.0
texture = ExtResource( 8 )
expand = true

[node name="Text" type="RichTextLabel" parent="CanvasLayer/TextBoxTop"]
margin_left = 7.0
margin_top = -1.0
margin_right = 584.0
margin_bottom = 106.0
rect_clip_content = false
theme = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "if you so desire: 
    * use arrow keys to move.."
tab_size = 2
text = "if you so desire: 
    * use arrow keys to move.."

[node name="DeathOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 0 )

[node name="Text" type="RichTextLabel" parent="CanvasLayer/DeathOverlay"]
margin_left = 52.0
margin_top = 169.0
margin_right = 608.0
margin_bottom = 439.0
rect_clip_content = false
theme = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]you died...[/center]

cause of death: 
   [color=red]got crabbed[/color]"
tab_size = 2
text = "you died...

cause of death: 
   got crabbed"

[node name="CreditsText" type="RichTextLabel" parent="CanvasLayer/DeathOverlay"]
visible = false
margin_left = 52.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 504.0
rect_clip_content = false
theme = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center]you beat [color=#ff8426]orange ocean[/color]
a game by [color=#ff8408]p[/color][color=#63ce08]e[/color][color=#ffff3a]t[/color][color=#6b63ff]s[/color] [color=#ffff3a]c[/color][color=#6b63ff]l[/color][color=#ff8408]u[/color][color=#63ce08]b[/color] 2 / jakeonaut

credits:
tropical water normal map: filter forge
error boy sfx: UGameZ (on itch!)
wilhelm scream: ???
everything else by me!
 i made it!
ME!!!!!

bye bye[/center]"
tab_size = 2
text = "you beat orange ocean
a game by pets club 2 / jakeonaut

credits:
tropical water normal map: filter forge
error boy sfx: UGameZ (on itch!)
wilhelm scream: ???
everything else by me!
 i made it!
ME!!!!!

bye bye"

[node name="Backgrounds" type="Spatial" parent="."]

[node name="bg" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -90 )
opacity = 0.25
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg2" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.5438, -60, -90 )
modulate = Color( 1, 0.588235, 0.588235, 1 )
opacity = 0.5
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg5" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.5438, -40, -90 )
modulate = Color( 1, 0.588235, 0.588235, 1 )
opacity = 0.5
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg7" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.5438, -20, -90 )
modulate = Color( 1, 0.588235, 0.588235, 1 )
opacity = 0.5
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg8" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 61.5438, 0, -90 )
modulate = Color( 1, 0.588235, 0.588235, 1 )
opacity = 0.5
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg3" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20, -90 )
modulate = Color( 0.25098, 0.207843, 0.65098, 1 )
opacity = 0.36
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg4" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -40, -90 )
modulate = Color( 0.266667, 0.266667, 0.313726, 1 )
opacity = 0.75
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="bg6" type="Sprite3D" parent="Backgrounds"]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 1, 20.557, -60, -90 )
modulate = Color( 0.188235, 0.188235, 0.286275, 1 )
pixel_size = 0.04
texture = ExtResource( 6 )

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6 )
projection = 1
current = true
size = 8.0

[node name="orange" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -1 )

[node name="Sounds" type="Spatial" parent="."]

[node name="BubbleSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="BubbleReverseSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="EwSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 43 )
volume_db = -2.0
pitch_scale = 1.5

[node name="DeadParasiteSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 36 )
volume_db = -5.0

[node name="LemonSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 37 )
volume_db = -32.0
pitch_scale = 0.8

[node name="OldWomanSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 44 )
volume_db = -40.0

[node name="OofSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 35 )
volume_db = -5.0
pitch_scale = 1.2

[node name="SadSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 29 )
volume_db = -5.0
pitch_scale = 1.2

[node name="HeartGetSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 47 )
volume_db = -13.0
pitch_scale = 0.8

[node name="SwooshSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = -18.0

[node name="CoconutChompSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = -10.0

[node name="HeySound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="HeyUpsetSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 20 )
volume_db = -15.0
pitch_scale = 1.5

[node name="WhatsupSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 21 )
volume_db = -15.0
pitch_scale = 1.2

[node name="CrabSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 22 )
volume_db = -8.0

[node name="ShatterSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 31 )
volume_db = -32.0
pitch_scale = 0.8

[node name="EquipCoconutSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 23 )
volume_db = -5.0

[node name="ScreamSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -18.0

[node name="BigOwSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 24 )
volume_db = -5.0

[node name="ErrorSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 25 )
volume_db = -8.0
pitch_scale = 1.5

[node name="UmSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 41 )
volume_db = -15.0
pitch_scale = 1.5

[node name="KissSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 42 )
volume_db = -5.0

[node name="Kelp" type="Spatial" parent="."]

[node name="kelp" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -70, 0 )

[node name="kelp2" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.503055, -70.4609, 0 )

[node name="kelp21" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -70, 0 )

[node name="kelp22" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.496945, -70.4609, 0 )

[node name="kelp23" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -70, 0 )

[node name="kelp24" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.49694, -70.4609, 0 )

[node name="kelp3" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -70, 0 )

[node name="kelp4" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.50306, -70.4609, 0 )

[node name="kelp5" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -70, 0 )

[node name="kelp6" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.50306, -70.4609, 0 )

[node name="kelp7" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -70, 0 )

[node name="kelp8" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.50306, -70.4609, 0 )

[node name="kelp9" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -70, 0 )

[node name="kelp10" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.50306, -70.4609, 0 )

[node name="kelp11" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -70, 0 )

[node name="kelp12" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.50306, -70.4609, 0 )

[node name="kelp13" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -70, 0 )

[node name="kelp14" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.50306, -70.4609, 0 )

[node name="kelp15" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -70, 0 )

[node name="kelp16" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.50306, -70.4609, 0 )

[node name="kelp17" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -70, 0 )

[node name="kelp18" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.50306, -70.4609, 0 )

[node name="kelp19" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, -70, 0 )

[node name="kelp20" parent="Kelp" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.50306, -70.4609, 0 )

[node name="Music" type="Spatial" parent="."]

[node name="SillyFishSong" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 49 )
volume_db = -20.0

[node name="CrabTimeSong" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 48 )
volume_db = -20.0

[node name="EnterTheDeepSong" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 51 )
volume_db = -10.0

[node name="TensionSong" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 52 )
volume_db = -20.0

[node name="PartySong" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 50 )
volume_db = -25.0

[node name="Rocks" type="Spatial" parent="."]

[node name="rock" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, -1 )

[node name="rock10" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 4, -1 )

[node name="rock11" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 4, -1 )

[node name="rock12" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 3, -1 )

[node name="rock13" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, -1 )

[node name="rock14" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 4, -1 )

[node name="rock15" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 4, -1 )

[node name="rock23" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -1 )

[node name="rock24" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 3, -1 )

[node name="rock29" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -1 )

[node name="rock30" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1, -1 )

[node name="rock31" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -1, -1 )

[node name="rock32" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1 )

[node name="rock33" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -4, -1 )

[node name="rock34" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -2, -1 )

[node name="rock35" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -1, -1 )

[node name="rock25" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -1 )

[node name="rock16" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, -1 )

[node name="rock28" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1, -1 )

[node name="rock17" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -1 )

[node name="rock18" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -1, -1 )

[node name="rock19" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -2, -1 )

[node name="rock20" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -3, -1 )

[node name="rock26" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -3, -1 )

[node name="rock27" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -3, -1 )

[node name="rock21" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -4, -1 )

[node name="rock22" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -4, -1 )

[node name="rock2" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1, -1 )

[node name="rock3" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -1, -1 )

[node name="rock4" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -2, -1 )

[node name="rock5" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2, -1 )

[node name="rock6" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, -1 )

[node name="rock7" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, -1 )

[node name="rock8" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 3, -1 )

[node name="rock9" parent="Rocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -1 )

[node name="Crab" type="Spatial" parent="."]

[node name="crab" parent="Crab" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 2, -1 )
